# mcp-probe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_SETUP.md  RELEASE_TROUBLESHOOTING.md  USING_SDK.md  install.sh  release.toml  rpc_cheatsheet.md  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
Formula/: mcp-probe.rb
crates/mcp-cli/: Cargo.toml  README.md
crates/mcp-cli/src/: cli.rs  config.rs  main.rs  paths.rs  search.rs  tui.rs
crates/mcp-cli/src/commands/: config.rs  debug.rs  export.rs  mod.rs  paths.rs  test.rs  validate.rs  validation.rs
crates/mcp-cli/src/flows/: demo.rs  mod.rs  negotiation.rs  states.rs  transitions.rs
crates/mcp-cli/src/utils/: mod.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: client.rs  error.rs  lib.rs  validation.rs
crates/mcp-core/src/messages/: core.rs  initialization.rs  logging.rs  mod.rs  prompts.rs  resources.rs  sampling.rs  tools.rs
crates/mcp-core/src/transport/: config.rs  factory.rs  http_sse.rs  http_stream.rs  mod.rs  stdio.rs
docs/: _config.yml  api-reference.md  contributing.md  documentation.md  examples.md  getting-started.md  index.md  mcp_guide.md
docs/assets/css/: style.scss
examples/: cli_tool.rs  simple_client.rs
scripts/: README.md  check.sh  fix.sh  pre-commit.sh  release.sh  version-bump.sh
