[workspace]
members = [
    "crates/mcp-core",
    "crates/mcp-cli"
]
resolver = "2"

[workspace.package]
version = "0.2.2"
authors = ["Chetan Conikee <chetan@conikee.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/conikeec/mcp-probe"
homepage = "https://github.com/conikeec/mcp-probe"
documentation = "https://docs.rs/mcp-probe"
description = "A production-grade MCP client and debugger built on Rust"
keywords = ["mcp", "protocol", "ai", "llm", "debugger"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
humantime-serde = "1.1"
html-escape = "0.2"

# HTTP and networking
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
url = { version = "2.5", features = ["serde"] }
eventsource-stream = "0.2"
bytes = "1.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.13"

# CLI and TUI
clap = { version = "4.4", features = ["derive", "env"] }
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
dialoguer = { version = "0.11", features = ["completion"] }

# Flow states handled by internal state machine

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Development and testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

# New dependencies (removed external validation libs)
# jsonschema = "0.18"  # Using simplified validation instead

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
incremental = true

[profile.test]
debug = true
opt-level = 1
incremental = true 