[package]
name = "mcp-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mcp-cli"
description = "Interactive CLI debugger and TUI for MCP servers"
keywords = ["mcp", "debugger", "cli", "tui", "protocol"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "mcp-probe"
path = "src/main.rs"

[dependencies]
# Workspace crates
mcp-probe-core = { version = "0.1.55", path = "../mcp-core" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# CLI framework
clap = { workspace = true }
dialoguer = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }

# Flow states handled by internal state machine

# Serialization and config
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
html-escape = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = { workspace = true }
url = { workspace = true }

# Validation
tempfile = "3.8"
jsonschema = "0.18"

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["tui"]
tui = []
json-logs = [] 