[package]
name = "mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mcp-core"
description = "Core MCP (Model Context Protocol) types, traits, and transport implementations"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
# Core async and serialization
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

# HTTP and networking for transports
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Configuration serialization
toml = { workspace = true }
humantime-serde = { workspace = true }

# Utilities for protocol implementation
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.8"
tracing-test = "0.2"

[features]
default = ["stdio", "http-sse", "http-stream"]
stdio = []
http-sse = []
http-stream = [] 